# multimodal-learning-tumor-classification

./: .gitignore  LICENSE  README.md  pyproject.toml
.claude/: settings.local.json
data/: Clinical_and_Other_Features_Full.xlsx
multimodal_tumor_classification/: __init__.py  __main__.py  clinical.py  config.py  dataset.py  dicom_utils.py  evaluation.py  imaging.py  ovis2_pipeline.py  prompts.py  swin_pipeline.py
results/ovis2_256crop/: results.json
results/ovis2_nocrop/: results.json
results/ovis2_proportional_crop/: results.json
results/swin_baseline/: experiment_summary.txt  results.json
